syntax = "proto3";

package stip;

/*
 * ClusterManagement Service
 */
service ClusterManagement {
    rpc NodeList (NodeListRequest) returns (NodeListReply);
    rpc NodeShow (NodeShowRequest) returns (NodeShowReply);
}

// Node Messages
message Node {
    uint32 id = 1;
    string rpcAddr = 2;
    string xferAddr = 3;
}

message NodeListRequest {
}

message NodeListReply {
    repeated Node nodes = 1;
}

message NodeShowRequest {
    uint32 id = 1;
}

message NodeShowReply {
    Node node = 1;
}

/*
 * DataManagement Service
 */
service DataManagement {
    rpc Broadcast (DataBroadcastRequest) returns (DataBroadcastReply);
    rpc Fill (DataFillRequest) returns (DataFillReply);
    rpc List (DataListRequest) returns (DataListReply);
    rpc Load (DataLoadRequest) returns (DataLoadReply);
    rpc Search (DataSearchRequest) returns (DataSearchReply);
    rpc Split (DataSplitRequest) returns (DataSplitReply);
}

// Broadcast Messages
enum DataBroadcastType {
    FILL = 0;
    LIST = 1;
    SEARCH = 2;
    SPLIT = 3;
}

message DataBroadcastRequest {
    DataBroadcastType messageType = 1;    
    DataFillRequest fillRequest = 2;
    DataListRequest listRequest = 3;
    DataSearchRequest searchRequest = 4;
    DataSplitRequest splitRequest = 5;
}

message DataBroadcastReply {
    DataBroadcastType messageType = 1;    
    map<uint32, DataFillReply> fillReplies = 2;
    map<uint32, DataListReply> listReplies = 3;
    map<uint32, DataSearchReply> searchReplies = 4;
    map<uint32, DataSplitReply> splitReplies = 5;
}

// Fill Messages
message DataFillRequest {
    string band = 1;
    string geohash = 2;
    string platform = 3;
    uint32 threadCount = 4;
    int64 windowSeconds = 5;
}

message DataFillReply {
    uint64 taskId = 1;
}

// List Messages
message Image {
    string band = 1;
    float cloudCoverage = 2;
    string dataset = 3;
    int64 endDate = 4;
    string geohash = 5;
    string path = 6;
    float pixelCoverage = 7;
    string platform = 8;
    int64 startDate = 9;
}

message DataListRequest {
    string band = 1;
    string dataset = 2;
    string geohash = 3;
    string platform = 4;
}

message DataListReply {
    repeated Image images = 1;
}

// Load Messages
enum LoadFormat {
    LANDSAT = 0;
    SENTINEL = 1;
}

message DataLoadRequest {
    string directory = 1;
    LoadFormat loadFormat = 2;
    uint32 precision = 3;
    uint32 threadCount = 4;
}

message DataLoadReply {
    uint64 task_id = 1;
}

// Search Messages
message Extent {
    string band = 1;
    uint32 count = 2;
    string dataset = 3;
    string geohash = 4;
    string platform = 5;
    uint32 precision = 6;
}

message DataSearchRequest {
    string band = 1;
    string dataset = 2;
    string geohash = 3;
    string platform = 4;
}

message DataSearchReply {
    repeated Extent extents = 1;
}

// Split Messages
message DataSplitRequest {
    string band = 1;
    string geohash = 2;
    string platform = 3;
    uint32 precision = 4;
    uint32 threadCount = 5;
}

message DataSplitReply {
    uint64 taskId = 1;
}

/*
 * TaskManagement Service
 */
service TaskManagement {
    rpc Broadcast (TaskBroadcastRequest) returns (TaskBroadcastReply);
    rpc List (TaskListRequest) returns (TaskListReply);
    rpc Show (TaskShowRequest) returns (TaskShowReply);
}

// Broadcast Messages
enum TaskBroadcastType {
    TASK_LIST = 0;
}

message TaskBroadcastRequest {
    TaskBroadcastType messageType = 1;    
    TaskListRequest listRequest = 2;
}

message TaskBroadcastReply {
    TaskBroadcastType messageType = 1;    
    map<uint32, TaskListReply> listReplies = 2;
}

// Task Messages
message Task {
    uint64 id = 1;    
    float completion_percent = 2;
    TaskStatus status = 3;
}

enum TaskStatus {
    COMPLETE = 0;
    FAILURE = 1;
    RUNNING = 2;
}

message TaskListRequest {
}

message TaskListReply {
    repeated Task tasks = 1;
}

message TaskShowRequest {
    uint64 id = 1;
}

message TaskShowReply {
    Task task = 1;
}
